crates/store/re_importer/src/importer_mcap/tests/foxglove/snapshots/re_importer__importer_mcap__tests__foxglove__test_point_cloud__foxglove_point_cloud_with_pose.snap
---
source: crates/store/re_importer/src/importer_mcap/tests/foxglove/test_point_cloud.rs
assertion_line: 18
expression: "format!(\"{:-240}\", chunk)"
---
┌─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┐
│ METADATA:                                                                                                                                                                                                                                   │
│ * entity_path: /point_cloud_with_pose                                                                                                                                                                                                       │
│ * id: [**REDACTED**]                                                                                                                                                                                                                        │
│ * version: [**REDACTED**]                                                                                                                                                                                                                   │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ ┌─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┬─────────────────────────┐ │
│ │ RowId                   ┆ message_log_time        ┆ message_publish_time    ┆ timestamp               ┆ CoordinateFrame:frame   ┆ InstancePoses3D:quatern ┆ InstancePoses3D:transla ┆ Points3D:colors         ┆ Points3D:positions      │ │
│ │ ---                     ┆ ---                     ┆ ---                     ┆ ---                     ┆ ---                     ┆ ions                    ┆ tions                   ┆ ---                     ┆ ---                     │ │
│ │ type: non-null          ┆ type: Timestamp(ns)     ┆ type: Timestamp(ns)     ┆ type: Timestamp(ns)     ┆ type: List(Utf8)        ┆ ---                     ┆ ---                     ┆ type: List(UInt32)      ┆ type:                   │ │
│ │ FixedSizeBinary(16)     ┆ index_name:             ┆ index_name:             ┆ index_name: timestamp   ┆ archetype:              ┆ type:                   ┆ type:                   ┆ archetype: Points3D     ┆ List(FixedSizeList(3 x  │ │
│ │ ARROW:extension:metadat ┆ message_log_time        ┆ message_publish_time    ┆ is_sorted: true         ┆ CoordinateFrame         ┆ List(FixedSizeList(4 x  ┆ List(FixedSizeList(3 x  ┆ component:              ┆ non-null Float32))      │ │
│ │ a: {"namespace":"row"}  ┆ is_sorted: true         ┆ is_sorted: true         ┆ kind: index             ┆ component:              ┆ non-null Float32))      ┆ non-null Float32))      ┆ Points3D:colors         ┆ archetype: Points3D     │ │
│ │ ARROW:extension:name:   ┆ kind: index             ┆ kind: index             ┆                         ┆ CoordinateFrame:frame   ┆ archetype:              ┆ archetype:              ┆ component_type: Color   ┆ component:              │ │
│ │ TUID                    ┆                         ┆                         ┆                         ┆ component_type:         ┆ InstancePoses3D         ┆ InstancePoses3D         ┆ kind: data              ┆ Points3D:positions      │ │
│ │ is_sorted: true         ┆                         ┆                         ┆                         ┆ TransformFrameId        ┆ component: InstancePose ┆ component: InstancePose ┆                         ┆ component_type:         │ │
│ │ kind: control           ┆                         ┆                         ┆                         ┆ kind: data              ┆ s3D:quaternions         ┆ s3D:translations        ┆                         ┆ Position3D              │ │
│ │                         ┆                         ┆                         ┆                         ┆                         ┆ component_type:         ┆ component_type:         ┆                         ┆ kind: data              │ │
│ │                         ┆                         ┆                         ┆                         ┆                         ┆ RotationQuat            ┆ Translation3D           ┆                         ┆                         │ │
│ │                         ┆                         ┆                         ┆                         ┆                         ┆ kind: data              ┆ kind: data              ┆                         ┆                         │ │
│ ╞═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╪═════════════════════════╡ │
│ │ row_[**REDACTED**]      ┆ 2026-02-17T14:13:33.852 ┆ 2026-02-17T14:13:33.852 ┆ 2026-02-17T14:13:33.852 ┆ [world]                 ┆ [[0.0, 0.0, 0.38268343, ┆ [[4.0, 0.0, 0.0]]       ┆ [4278190335, 16711935,  ┆ [[0.0, 0.0, 0.0], [1.0, │ │
│ │                         ┆ 164096                  ┆ 164096                  ┆ 164096                  ┆                         ┆ 0.9238795]]             ┆                         ┆ 65535, 4294902015,      ┆ 0.0, 0.0], [1.0, 1.0,   │ │
│ │                         ┆                         ┆                         ┆                         ┆                         ┆                         ┆                         ┆ 4278255615, 16777215,   ┆ 0.0], [0.0, 1.0, 0.0],  │ │
│ │                         ┆                         ┆                         ┆                         ┆                         ┆                         ┆                         ┆ 4294967295, 4286578943] ┆ [0.0, 0.0, 1.0], [1.0,  │ │
│ │                         ┆                         ┆                         ┆                         ┆                         ┆                         ┆                         ┆                         ┆ 0.0, 1.…                │ │
│ └─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┴─────────────────────────┘ │
└─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘
